# otto

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEBUG.md  README.md  RESUMING.md  TODO.md  bench-report.md  e2e-findings.md  e2e-scenarios.md  handoff-codex-redesign.md  manager.py  memory.md  otto_bug_report_2026-03-29.md  package-lock.json  package.json  plan-agent-driven-v1.md  plan-checkpoint-resume.md  plan-log-restructure.md  plan-mc-audit.md  plan-parallel.md  plan-pipeline-refactor.md  plan-unified-certifier.md  plan-web-ui-impl.md  plan-web-ui-redesign.md  pyproject.toml  qkrem.md  qkrem_i2p.md  research-agent-driven-architecture.md  research-cc-rendering.md  research-inline-tui.md  research-symphony.md  research-testgen-output.md  research-testgen-sota.md  research-tui.md  research-unified-certifier.md  research.md  review.md  summary.json  (+4 more)
bench/: ab-qa-test.sh  bad-cases.yaml  pilot-benchmark.sh  suite.yaml
bench-fixtures/: flask-api-branches.bundle  p6-branches.bundle
bench-results/: F12-revert-validation-P6-salvage.json  F13-P6-consolidated-agent-mode.json  F13-P6-consolidated-with-cert.json  F13-P6-consolidated.json  F13-P6-phases-1-2.json  F13-diverse-1776714472.json  F13-flask-api.json  F13-small-synthetic.json  P1-todo-parallel-improves.json  P2-todo-sequential-baseline.json  P3-bookmark-parallel-features.json  P4-flask-auth-users-posts.json  P5-markdown-blog-ssg.json  P6-inventory-cli.json  build-merge-with-cert.json  p6_inventory_cli.json  selective-skip.json  synthetic-skip.json
docs/: architecture-2026-03-15.md  architecture.md  certifier-e2e-results-2026-03-31.md  certifier-hidden-inputs-audit.md  certifier-v2-agentic-spec.md  certifier-v2-final-spec.md  certifier-v2-product-qa-spec.md  certifier-v2-spec.md  claude-impact-findings.md  code-health-token-runtime-centralization-2026-04-26.md  coderabbit-review-2026-03-28.md  codex-e2e-guide.md  codex-provider-audit.md  codex-vs-otto-comparison-2026-04-01.md  experiments-index.md  future-inner-loop-qa-optimization.md  handoff-certifier-v2.md  instruction-following.md  mvp-intent-to-pr-ready-slice.md  next-improvements.md  otto-bug-hunt-e2e-2026-04-23.md  otto-review-handoff-2026-03-28.md  otto-web-production-plan.md  parallel-qa-findings.md  plan-certify-otto.md  plan-qa-unification.md  plan-worktree-unification.md  pressure-test-handover.md  pressure-test-parallel.md  real-world-validation-2026-04-10.md  run-certifier-ubuntu.md  symphony-analysis-and-next-steps.md  tui-mission-control-lessons.md  tui-mission-control-status.md  web-mission-control-audit-2026-04-24.md  web-mission-control-plan.md  web-mission-control-production-readiness-2026-04-24.md  web-mission-control-ready-land-debug.md  web-mission-control-test-model.md
otto/: __init__.py  _agent_stub.py  agent.py  architect.py  bench.py  branching.py  budget.py  checkpoint.py  claim_verify.py  cli.py  cli_bench.py  cli_cleanup.py  cli_improve.py  cli_logs.py  cli_merge.py  cli_pow.py  cli_queue.py  cli_setup.py  config.py  context.py  cost_tracker.py  costs.py  display.py  display_preview.py  feedback.py  flaky.py  git_ops.py  history.py  journal.py  logstream.py  manifest.py  markers.py  memory.py  merge_resolve.py  observability.py  orchestrator.py  outer_loop.py  paths.py  pilot.py  pilot_v3.py  (+26 more)
otto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: asciinema_shim.py  bench-certifier.py  bench_build_merge_with_cert.py  bench_costs.py  bench_f13_diverse.py  bench_flask_fixture.py  bench_p6_consolidated.py  bench_report.py  bench_runner.py  bench_selective_skip.py  bench_small_conflict.py  bench_synthetic_skip.py  build_stamp.py  cast_utils.py  check_bundle_committed.py  demo_real_dashboard.exp  e2e_dashboard_behavioral.py  e2e_dashboard_pexpect.py  e2e_harness.py  e2e_merge_sanity.py  e2e_runner.py  e2e_web_mission_control.py  fake-otto.sh  otto_as_user.py  otto_as_user_nightly.py  real_cost_guard.py  restore_flask_fixture.sh  restore_p6_fixture.sh  sync-ubuntu.sh  test_tiers.py  web_as_user.py  web_record_fixture.py
static/: app.js  index.html  style.css
tests/: _helpers.py  _web_mc_helpers.py  conftest.py  test_agent.py  test_agent_driven.py  test_architect.py  test_bench.py  test_bench_breakdown_report.py  test_branching.py  test_build_fallback_to_intent_md.py  test_certifier_baseline.py  test_certifier_cli.py  test_certifier_stories.py  test_certifier_tier2.py  test_claim_verify.py  test_cli.py  test_cli_cleanup.py  test_cli_improve.py  test_cli_merge.py  test_cli_queue.py  test_cli_smoke.py  test_config.py  test_context.py  test_continuous_build.py  test_cost_tracker.py  test_diff_freshness.py  test_dirty_target_no_otto_files.py  test_e2e_scripts.py  test_env_bypass.py  test_event_log_no_internal_mode_flags.py  test_event_log_run_lifecycle.py  test_fake_otto_harness.py  test_flaky.py  test_git_ops.py  test_hardening.py  test_improve_branches_from_prior_run.py  test_improve_phase_writes_to_improve_dir.py  test_improve_task_slug_uses_focus.py  test_improve_writes_build_journal_single_round.py  test_improvement_report_splits_pass_warn_fail.py  (+77 more)
tools/: bench_breakdown_report.py  display_preview.py  replay_bare_output_into_otto_qa.py
weather2/: .gitignore  index.html  package-lock.json  package.json  perf-test.mjs  tsconfig.json  vite.config.ts
(+949 files in other folders)
