[project]
name = "otto"
version = "0.1.0"
description = "A reliability harness for autonomous product-building agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Otto maintainers" },
]
dependencies = [
    "click>=8.0",
    "pyte>=0.8.2",
    "pyyaml>=6.0",
    "rich>=13.0",
    "psutil>=5.9",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
claude = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "claude-agent-sdk>=0.1.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.24",
    # Browser test harness for Mission Control UI (Phase 3 of plan-mc-audit.md).
    # Pin minor versions: pytest-playwright tracks playwright-python closely,
    # and a future minor that ships breaking page-fixture changes shouldn't
    # silently land on `uv pip install -e ".[dev]"`.
    "pytest-playwright>=0.7,<0.8",
    "playwright>=1.50,<1.60",
    # Deterministic timestamps for browser snapshot/visual-regression tests.
    "freezegun>=1.5,<2.0",
]

[project.scripts]
otto = "otto.cli:main"

[project.urls]
Homepage = "https://github.com/logpie/otto"
Repository = "https://github.com/logpie/otto"
Issues = "https://github.com/logpie/otto/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["otto*"]

[tool.setuptools.package-data]
# Recursive glob: any future nested asset directory (fonts/, images/,
# locale/, etc.) is automatically packaged. The `**/*` form is supported
# by setuptools >=69 (already pinned in [build-system]).
"otto.web" = ["static/**/*"]
"otto.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
# Default suite excludes:
#   - `browser`: Playwright browser tests (run via `pytest -m browser`,
#     which also opts the playwright plugin in via `-p playwright`)
# The playwright plugin is *disabled* in the default suite because it
# pre-registers async fixtures that conflict with pytest-asyncio's loop
# management ("Cannot run the event loop while another loop is running").
addopts = ["-m", "not browser", "-p", "no:playwright"]
markers = [
    "browser: Playwright-driven Mission Control browser tests; excluded from the default suite (run with `pytest -m browser -p playwright`)",
]

# Tell type-checkers (pyright/basedpyright) that `tests/` is a package root so
# imports like `from tests.browser._helpers.server import MCBackend` and the
# relative `from ._helpers.server import MCBackend` (used inside
# `tests/browser/conftest.py`) resolve cleanly. pytest already discovers these
# at runtime via the package `__init__.py` files.
[tool.pyright]
include = ["otto", "tests", "scripts"]
extraPaths = [".", "scripts"]
